docs/v8.2/packages_api/data/_index.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "@grafana/data"
keywords = ["grafana","documentation","sdk","@grafana/data"]
type = "docs"
disable_edit_link = true
+++

## @grafana/data package

A library containing most of the core functionality and data types used in Grafana.

## Classes

|  Class | Description |
|  --- | --- |
|  [AppendedVectors](./appendedvectors/) | This may be more trouble than it is worth. This trades some computation time for RAM -- rather than allocate a new array the size of all previous arrays, this just points the correct index to their original array values |
|  [AppPlugin](./appplugin/) |  |
|  [ArrayVector](./arrayvector/) |  |
|  [AsNumberVector](./asnumbervector/) | This will force all values to be numbers |
|  [BinaryOperationVector](./binaryoperationvector/) |  |
|  [CircularDataFrame](./circulardataframe/) | This dataframe can have values constantly added, and will never exceed the given capacity |
|  [CircularVector](./circularvector/) | Circular vector uses a single buffer to capture a stream of values overwriting the oldest value on add.<!-- -->This supports adding to the 'head' or 'tail' and will grow the buffer to match a configured capacity. |
|  [ConstantVector](./constantvector/) |  |
|  [CSVReader](./csvreader/) |  |
|  [DataFrameView](./dataframeview/) | <b><i>(BETA)</i></b> This abstraction will present the contents of a DataFrame as if it were a well typed javascript object Vector. |
|  [DataSourceApi](./datasourceapi/) | The main data source abstraction interface, represents an instance of a data source<!-- -->Although this is a class, datasource implementations do not \*yet\* need to extend it. As such, we can not yet add functions with default implementations. |
|  [DataSourcePlugin](./datasourceplugin/) |  |
|  [FieldCache](./fieldcache/) |  |
|  [FieldConfigEditorBuilder](./fieldconfigeditorbuilder/) | Fluent API for declarative creation of field config option editors |
|  [FieldConfigOptionsRegistry](./fieldconfigoptionsregistry/) |  |
|  [FormattedVector](./formattedvector/) |  |
|  [GrafanaPlugin](./grafanaplugin/) |  |
|  [IndexVector](./indexvector/) | IndexVector is a simple vector implementation that returns the index value for each element in the vector. It is functionally equivolant a vector backed by an array with values: <code>[0,1,2,...,length-1]</code> |
|  [LanguageProvider](./languageprovider/) |  |
|  [MutableDataFrame](./mutabledataframe/) |  |
|  [PanelOptionsEditorBuilder](./paneloptionseditorbuilder/) | Fluent API for declarative creation of panel options |
|  [PanelPlugin](./panelplugin/) |  |
|  [Registry](./registry/) |  |
|  [SortedVector](./sortedvector/) | Values are returned in the order defined by the input parameter |
|  [SystemDateFormatsState](./systemdateformatsstate/) |  |

## Enumerations

|  Enumeration | Description |
|  --- | --- |
|  [BinaryOperationID](./binaryoperationid/) |  |
|  [ByNamesMatcherMode](./bynamesmatchermode/) | Mode to be able to toggle if the names matcher should match fields in provided list or all except provided names. |
|  [CoreApp](./coreapp/) |  |
|  [CSVHeaderStyle](./csvheaderstyle/) |  |
|  [DashboardCursorSync](./dashboardcursorsync/) |  |
|  [DataFrameType](./dataframetype/) | See also: https://github.com/grafana/grafana-plugin-sdk-go/blob/main/data/frame\_type.go |
|  [DataQueryErrorType](./dataqueryerrortype/) |  |
|  [DataTopic](./datatopic/) | Attached to query results (not persisted) |
|  [DataTransformerID](./datatransformerid/) |  |
|  [ExploreMode](./exploremode/) |  |
|  [FieldColorModeId](./fieldcolormodeid/) |  |
|  [FieldConfigProperty](./fieldconfigproperty/) |  |
|  [FieldMatcherID](./fieldmatcherid/) |  |
|  [FieldType](./fieldtype/) |  |
|  [FrameMatcherID](./framematcherid/) | Field name matchers |
|  [GrafanaThemeType](./grafanathemetype/) |  |
|  [InternalTimeZones](./internaltimezones/) |  |
|  [LayoutModes](./layoutmodes/) |  |
|  [LiveChannelConnectionState](./livechannelconnectionstate/) |  |
|  [LiveChannelEventType](./livechanneleventtype/) |  |
|  [LoadingState](./loadingstate/) | Represent panel data loading state. |
|  [LogLevel](./loglevel/) | Mapping of log level abbreviation to canonical log level. Supported levels are reduce to limit color variation. |
|  [LogsDedupDescription](./logsdedupdescription/) |  |
|  [LogsDedupStrategy](./logsdedupstrategy/) |  |
|  [LogsMetaKind](./logsmetakind/) |  |
|  [LogsSortOrder](./logssortorder/) |  |
|  [MatcherID](./matcherid/) |  |
|  [NodeGraphDataFrameFieldNames](./nodegraphdataframefieldnames/) |  |
|  [NullValueMode](./nullvaluemode/) |  |
|  [OrgRole](./orgrole/) |  |
|  [PluginErrorCode](./pluginerrorcode/) | Describes error code returned from Grafana plugins API call |
|  [PluginIncludeType](./pluginincludetype/) |  |
|  [PluginSignatureStatus](./pluginsignaturestatus/) | Describes status of [plugin signature](https://grafana.com/docs/grafana/v8.2/plugins/plugin-signatures/) |
|  [PluginSignatureType](./pluginsignaturetype/) | Describes level of [plugin signature level](https://grafana.com/docs/grafana/v8.2/plugins/plugin-signatures/#plugin-signature-levels/) |
|  [PluginState](./pluginstate/) | Describes plugins life cycle status |
|  [PluginType](./plugintype/) | Describes [type of plugin](https://grafana.com/docs/grafana/v8.2/plugins) |
|  [ReducerID](./reducerid/) |  |
|  [StreamingFrameAction](./streamingframeaction/) | Indicate if the frame is appened or replace<!-- -->-- but runtime |
|  [ThresholdsMode](./thresholdsmode/) | Display mode |
|  [ValueMatcherID](./valuematcherid/) |  |
|  [VariableOrigin](./variableorigin/) |  |
|  [VariableSuggestionsScope](./variablesuggestionsscope/) |  |
|  [VizOrientation](./vizorientation/) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [addDurationToDate(date, duration)](./adddurationtodate/) | addDurationToDate adds given duration to given date and returns a new Date object |
|  [addLogLevelToSeries(series, lineIndex)](./addlogleveltoseries/) |  |
|  [anySeriesWithTimeField(data)](./anyserieswithtimefield/) | Indicates if there is any time field in the array of data frames |
|  [applyFieldOverrides(options)](./applyfieldoverrides/) | Return a copy of the DataFrame with all rules applied |
|  [applyRawFieldOverrides(data)](./applyrawfieldoverrides/) | Return a copy of the DataFrame with raw data |
|  [booleanValueFormatter(t, f)](./booleanvalueformatter/) |  |
|  [calculateFieldStats(rows, extractor)](./calculatefieldstats/) |  |
|  [calculateLogsLabelStats(rows, label)](./calculatelogslabelstats/) |  |
|  [calculateStats(values)](./calculatestats/) |  |
|  [compareArrayValues(a, b, cmp)](./comparearrayvalues/) | <b><i>(BETA)</i></b> Check if all values in two arrays match the compare funciton |
|  [compareDataFrameStructures(a, b, skipConfig)](./comparedataframestructures/) | <b><i>(BETA)</i></b> Returns true if both frames have the same name, fields, labels and configs. |
|  [doStandardCalcs(field, ignoreNulls, nullAsZero)](./dostandardcalcs/) |  |
|  [durationToMilliseconds(duration)](./durationtomilliseconds/) | durationToMilliseconds convert a duration object to milliseconds |
|  [ensureTimeField(field, dateFormat)](./ensuretimefield/) | Checks the first value. Assumes any number should be time fieldtype. Otherwise attempts to make the fieldtype time. |
|  [eventFactory(name)](./eventfactory/) |  |
|  [findCommonLabels(labelsSets)](./findcommonlabels/) | Returns a map labels that are common to the given label sets. |
|  [findHighlightChunksInText({ searchWords, textToHighlight, })](./findhighlightchunksintext/) | Adapt findMatchesInText for react-highlight-words findChunks handler. See https://github.com/bvaughn/react-highlight-words\#props |
|  [findMatchesInText(haystack, needle)](./findmatchesintext/) | Returns a list of substring regexp matches. |
|  [findUniqueLabels(labels, commonLabels)](./finduniquelabels/) | Returns a map of labels that are in <code>labels</code>, but not in <code>commonLabels</code>. |
|  [formatLabels(labels, defaultValue, withoutBraces)](./formatlabels/) | Serializes the given labels to a string. |
|  [formattedValueToString(val)](./formattedvaluetostring/) |  |
|  [getActiveThreshold(value, thresholds)](./getactivethreshold/) |  |
|  [getColorForTheme(color, theme)](./getcolorfortheme/) |  |
|  [getColorFromHexRgbOrName(color, type)](./getcolorfromhexrgborname/) |  |
|  [getDataFrameRow(data, row)](./getdataframerow/) | Wrapper to get an array from each field value |
|  [getDefaultRelativeTimeRange()](./getdefaultrelativetimerange/) | Returns the default realtive time range. |
|  [getDefaultTimeRange()](./getdefaulttimerange/) |  |
|  [getDisplayProcessor(options)](./getdisplayprocessor/) |  |
|  [getDisplayValueAlignmentFactors(values)](./getdisplayvaluealignmentfactors/) |  |
|  [getFieldColorMode(mode)](./getfieldcolormode/) | <b><i>(BETA)</i></b> |
|  [getFieldColorModeForField(field)](./getfieldcolormodeforfield/) | <b><i>(BETA)</i></b> |
|  [getFieldDisplayName(field, frame, allFrames)](./getfielddisplayname/) |  |
|  [getFieldMatcher(config)](./getfieldmatcher/) | Resolves a field matcher from the registry for given config. Will throw an error if matcher can not be resolved. |
|  [getFlotPairs({ xField, yField, nullValueMode })](./getflotpairs/) |  |
|  [getFlotPairsConstant(seriesData, range)](./getflotpairsconstant/) | Returns a constant series based on the first value from the provide series. |
|  [getFrameDisplayName(frame, index)](./getframedisplayname/) | Get an appropriate display title |
|  [getFrameMatchers(config)](./getframematchers/) | Resolves a frame matcher from the registry for given config. Will throw an error if matcher can not be resolved. |
|  [getLogLevel(line)](./getloglevel/) | Returns the log level of a log line. Parse the line for level words. If no level is found, it returns <code>LogLevel.unknown</code>.<!-- -->Example: <code>getLogLevel('WARN 1999-12-31 this is great') // LogLevel.warn</code> |
|  [getLogLevelFromKey(key)](./getloglevelfromkey/) |  |
|  [getParser(line)](./getparser/) |  |
|  [getRawDisplayProcessor()](./getrawdisplayprocessor/) |  |
|  [getScaleCalculator(field, theme)](./getscalecalculator/) |  |
|  [getValueFormat(id)](./getvalueformat/) |  |
|  [getValueFormats()](./getvalueformats/) |  |
|  [getValueFormatterIndex()](./getvalueformatterindex/) |  |
|  [getValueMatcher(config)](./getvaluematcher/) | Resolves a value matcher from the registry for given config. Will throw an error if matcher can not be resolved. |
|  [guessFieldTypeForField(field)](./guessfieldtypeforfield/) | Looks at the data to guess the column type. This ignores any existing setting |
|  [guessFieldTypeFromNameAndValue(name, v)](./guessfieldtypefromnameandvalue/) | Given a name and value, this will pick a reasonable field type |
|  [guessFieldTypeFromValue(v)](./guessfieldtypefromvalue/) | Given a value this will guess the best column type<!-- -->TODO: better Date/Time support! Look for standard date strings? |
|  [hasLinks(field)](./haslinks/) |  |
|  [intervalToAbbreviatedDurationString(interval, includeSeconds)](./intervaltoabbreviateddurationstring/) | intervalToAbbreviatedDurationString converts interval to readable duration string |
|  [isBooleanUnit(unit)](./isbooleanunit/) |  |
|  [isLiveChannelJoinEvent(evt)](./islivechanneljoinevent/) |  |
|  [isLiveChannelLeaveEvent(evt)](./islivechannelleaveevent/) |  |
|  [isLiveChannelMessageEvent(evt)](./islivechannelmessageevent/) |  |
|  [isLiveChannelStatusEvent(evt)](./islivechannelstatusevent/) |  |
|  [isValidDate(dateString)](./isvaliddate/) | isValidDate returns true if given string can be parsed into valid Date object, false otherwise |
|  [isValidDuration(durationString)](./isvalidduration/) | isValidDuration returns true if the given string can be parsed into a valid Duration object, false otherwise |
|  [locale(value, decimals)](./locale/) |  |
|  [localTimeFormat(options, locale, fallback)](./localtimeformat/) | localTimeFormat helps to generate date formats for momentjs based on browser's locale |
|  [makeClassES5Compatible(ES6Class)](./makeclasses5compatible/) | <b><i>(BETA)</i></b> Proxies a ES6 class so that it can be used as a base class for an ES5 class |
|  [mapInternalLinkToExplore(options)](./mapinternallinktoexplore/) |  |
|  [matchAllLabels(expect, against)](./matchalllabels/) | Check that all labels exist in another set of labels |
|  [outerJoinDataFrames(options)](./outerjoindataframes/) | This will return a single frame joined by the first matching field. When a join field is not specified, the default will use the first time field |
|  [parseDuration(duration)](./parseduration/) | parseDuration parses duration string into datefns Duration object |
|  [parseFlags(text)](./parseflags/) | Converts any mode modifiers in the text to the Javascript equivalent flag |
|  [parseLabels(labels)](./parselabels/) | Returns a map of label keys to value from an input selector string.<!-- -->Example: <code>parseLabels('{job=&quot;foo&quot;, instance=&quot;bar&quot;}) // {job: &quot;foo&quot;, instance: &quot;bar&quot;}</code> |
|  [readCSV(csv, options)](./readcsv/) |  |
|  [reduceField(options)](./reducefield/) |  |
|  [renderMarkdown(str, options)](./rendermarkdown/) |  |
|  [reverseDataFrame(data)](./reversedataframe/) | Returns a copy with all values reversed |
|  [scaledUnits(factor, extArray)](./scaledunits/) |  |
|  [serializeStateToUrlParam(urlState, compact)](./serializestatetourlparam/) |  |
|  [shallowCompare(a, b, cmp)](./shallowcompare/) | <b><i>(BETA)</i></b> Checks if two objects are equal shallowly |
|  [simpleCountUnit(symbol)](./simplecountunit/) |  |
|  [sortDataFrame(data, sortIndex, reverse)](./sortdataframe/) |  |
|  [sortThresholds(thresholds)](./sortthresholds/) | Sorts the thresholds |
|  [stringFormater(value)](./stringformater/) |  |
|  [stringStartsAsRegEx(str)](./stringstartsasregex/) |  |
|  [stringToJsRegex(str)](./stringtojsregex/) |  |
|  [stringToMs(str)](./stringtoms/) |  |
|  [toCSV(data, config)](./tocsv/) |  |
|  [toDataFrame(data)](./todataframe/) | Inspect any object and return the results as a DataFrame |
|  [toDataFrameDTO(data)](./todataframedto/) | Returns a copy that does not include functions |
|  [toFixed(value, decimals)](./tofixed/) |  |
|  [toFixedScaled(value, decimals, ext)](./tofixedscaled/) |  |
|  [toFixedUnit(unit, asPrefix)](./tofixedunit/) |  |
|  [toFloatOrUndefined(value)](./tofloatorundefined/) |  |
|  [toIntegerOrUndefined(value)](./tointegerorundefined/) |  |
|  [toNumberString(value)](./tonumberstring/) |  |
|  [transformDataFrame(options, data)](./transformdataframe/) | Apply configured transformations to the input data |
|  [updateDatasourcePluginOption(props, key, val)](./updatedatasourcepluginoption/) |  |
|  [validateFieldConfig(config)](./validatefieldconfig/) | This checks that all options on FieldConfig make sense. It mutates any value that needs fixed. In particular this makes sure that the first threshold value is -Infinity (not valid in JSON) |
|  [vectorator(vector)](./vectorator/) | Use functional programming with your vector |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AbsoluteTimeRange](./absolutetimerange/) |  |
|  [AnnotationEvent](./annotationevent/) |  |
|  [AnnotationEventFieldMapping](./annotationeventfieldmapping/) |  |
|  [AnnotationEventUIModel](./annotationeventuimodel/) |  |
|  [AnnotationQuery](./annotationquery/) | This JSON object is stored in the dashboard json model. |
|  [AnnotationQueryRequest](./annotationqueryrequest/) | Options passed to the datasource.annotationQuery method. See docs/plugins/developing/datasource.md |
|  [AnnotationSupport](./annotationsupport/) | Since Grafana 7.2<!-- -->This offers a generic approach to annotation processing |
|  [AppEvent](./appevent/) |  |
|  [ApplyFieldOverrideOptions](./applyfieldoverrideoptions/) |  |
|  [AppPluginMeta](./apppluginmeta/) |  |
|  [AppRootProps](./approotprops/) |  |
|  [BasicValueMatcherOptions](./basicvaluematcheroptions/) | Describes a basic value matcher option that has a single value. |
|  [BuildInfo](./buildinfo/) | Describes the build information that will be available via the Grafana configuration. |
|  [BusEventType](./buseventtype/) |  |
|  [ByNamesMatcherOptions](./bynamesmatcheroptions/) | Options to instruct the by names matcher to either match all fields in given list or all except the fields in the list. |
|  [CartesianCoords2D](./cartesiancoords2d/) | A coordinate on a two dimensional plane. |
|  [Column](./column/) |  |
|  [ConfigOverrideRule](./configoverriderule/) |  |
|  [CreatePlotOverlay](./createplotoverlay/) |  |
|  [CSVConfig](./csvconfig/) |  |
|  [CSVOptions](./csvoptions/) |  |
|  [CSVParseCallbacks](./csvparsecallbacks/) |  |
|  [DataConfigSource](./dataconfigsource/) | Describes and API for exposing panel specific data configurations. |
|  [DataFrame](./dataframe/) |  |
|  [DataFrameDTO](./dataframedto/) | Like a DataFrame, but fields may be a FieldDTO |
|  [DataLink](./datalink/) | Link configuration. The values may contain variables that need to be processed before showing the link to user.<!-- -->TODO: &lt;<!-- -->T extends DataQuery<!-- -->&gt; is not strictly true for internal links as we do not need refId for example but all data source defined queries extend this so this is more for documentation. |
|  [DataLinkClickEvent](./datalinkclickevent/) | Callback info for DataLink click events |
|  [DataLinksFieldConfigSettings](./datalinksfieldconfigsettings/) |  |
|  [DataQuery](./dataquery/) | These are the common properties available to all queries in all datasources Specific implementations will \*extend\* this interface adding the required properties for the given context |
|  [DataQueryError](./dataqueryerror/) |  |
|  [DataQueryRequest](./dataqueryrequest/) |  |
|  [DataQueryResponse](./dataqueryresponse/) |  |
|  [DataQueryTimings](./dataquerytimings/) |  |
|  [DataSourceConstructor](./datasourceconstructor/) |  |
|  [DataSourceInstanceSettings](./datasourceinstancesettings/) | Frontend settings model that is passed to Datasource constructor. This differs a bit from the model above as this data model is available to every user who has access to a data source (Viewers+). This is loaded in bootData (on page load), or from: /api/frontend/settings |
|  [DataSourceJsonData](./datasourcejsondata/) |  |
|  [DataSourcePluginComponents](./datasourceplugincomponents/) |  |
|  [DataSourcePluginMeta](./datasourcepluginmeta/) |  |
|  [DataSourcePluginOptionsEditorProps](./datasourcepluginoptionseditorprops/) |  |
|  [DataSourceSelectItem](./datasourceselectitem/) |  |
|  [DataSourceSettings](./datasourcesettings/) | Data Source instance edit model. This is returned from: /api/datasources |
|  [DataTransformerConfig](./datatransformerconfig/) |  |
|  [DataTransformerInfo](./datatransformerinfo/) | Function that transform data frames (AKA transformer) |
|  [DateTime](./datetime/) |  |
|  [DateTimeBuiltinFormat](./datetimebuiltinformat/) |  |
|  [DateTimeDuration](./datetimeduration/) |  |
|  [DateTimeLocale](./datetimelocale/) |  |
|  [DateTimeOptions](./datetimeoptions/) | The type describing date and time options. Used for all the helper functions available to parse or format date and time values. |
|  [DateTimeOptionsWhenParsing](./datetimeoptionswhenparsing/) | The type that describes options that can be passed when parsing a date and time value. |
|  [DateTimeOptionsWithFormat](./datetimeoptionswithformat/) | The type describing the options that can be passed to the [dateTimeFormat]({{< relref "../data/datetimeformat.md" >}}) helper function to control how the date and time value passed to the function is formatted. |
|  [DecimalInfo](./decimalinfo/) |  |
|  [Dimension](./dimension/) |  |
|  [Dimensions2D](./dimensions2d/) | 2d object dimensions. |
|  [DisplayValue](./displayvalue/) |  |
|  [DisplayValueAlignmentFactors](./displayvaluealignmentfactors/) | These represents the display value with the longest title and text. Used to align widths and heights when displaying multiple DisplayValues |
|  [DynamicConfigValue](./dynamicconfigvalue/) |  |
|  [FeatureToggles](./featuretoggles/) | Describes available feature toggles in Grafana. These can be configured via the <code>conf/custom.ini</code> to enable features under development or not yet available in stable version. |
|  [Field](./field/) |  |
|  [FieldCalcs](./fieldcalcs/) |  |
|  [FieldColor](./fieldcolor/) |  |
|  [FieldColorConfigSettings](./fieldcolorconfigsettings/) |  |
|  [FieldColorMode](./fieldcolormode/) | <b><i>(BETA)</i></b> |
|  [FieldConfig](./fieldconfig/) | Every property is optional<!-- -->Plugins may extend this with additional properties. Something like series overrides |
|  [FieldConfigEditorConfig](./fieldconfigeditorconfig/) |  |
|  [FieldConfigEditorProps](./fieldconfigeditorprops/) |  |
|  [FieldConfigPropertyItem](./fieldconfigpropertyitem/) |  |
|  [FieldConfigSource](./fieldconfigsource/) |  |
|  [FieldDisplay](./fielddisplay/) |  |
|  [FieldDTO](./fielddto/) | Like a field, but properties are optional and values may be a simple array |
|  [FieldMatcherInfo](./fieldmatcherinfo/) |  |
|  [FieldNamePickerConfigSettings](./fieldnamepickerconfigsettings/) |  |
|  [FieldOverrideContext](./fieldoverridecontext/) |  |
|  [FieldOverrideEditorProps](./fieldoverrideeditorprops/) |  |
|  [FieldReducerInfo](./fieldreducerinfo/) |  |
|  [FieldSparkline](./fieldsparkline/) |  |
|  [FieldWithIndex](./fieldwithindex/) |  |
|  [FlotDataPoint](./flotdatapoint/) |  |
|  [FormattedValue](./formattedvalue/) |  |
|  [FrameMatcherInfo](./framematcherinfo/) |  |
|  [GetFieldDisplayValuesOptions](./getfielddisplayvaluesoptions/) |  |
|  [GrafanaConfig](./grafanaconfig/) | Describes all the different Grafana configuration values available for an instance. |
|  [GrafanaTheme](./grafanatheme/) |  |
|  [GrafanaTheme2](./grafanatheme2/) | <b><i>(BETA)</i></b> Next gen theme model introduced in Grafana v8. |
|  [GrafanaThemeCommons](./grafanathemecommons/) |  |
|  [GraphSeriesXY](./graphseriesxy/) | View model projection of a series |
|  [GroupedTimeZones](./groupedtimezones/) |  |
|  [HistoryItem](./historyitem/) |  |
|  [IntervalValues](./intervalvalues/) |  |
|  [Labels](./labels/) |  |
|  [LegacyEmitter](./legacyemitter/) |  |
|  [LegacyEventHandler](./legacyeventhandler/) |  |
|  [LegacyGraphHoverEventPayload](./legacygraphhovereventpayload/) |  |
|  [LicenseInfo](./licenseinfo/) | Describes the license information about the current running instance of Grafana. |
|  [LinkModel](./linkmodel/) | Processed Link Model. The values are ready to use |
|  [LinkModelSupplier](./linkmodelsupplier/) | Provides a way to produce links on demand<!-- -->TODO: ScopedVars in in GrafanaUI package! |
|  [LiveChannelJoinEvent](./livechanneljoinevent/) |  |
|  [LiveChannelLeaveEvent](./livechannelleaveevent/) |  |
|  [LiveChannelMessageEvent](./livechannelmessageevent/) |  |
|  [LogLabelStatsModel](./loglabelstatsmodel/) |  |
|  [LogRowModel](./logrowmodel/) |  |
|  [LogSearchMatch](./logsearchmatch/) |  |
|  [LogsMetaItem](./logsmetaitem/) |  |
|  [LogsModel](./logsmodel/) |  |
|  [LogsParser](./logsparser/) |  |
|  [MatcherConfig](./matcherconfig/) |  |
|  [MetadataInspectorProps](./metadatainspectorprops/) |  |
|  [MetricFindValue](./metricfindvalue/) |  |
|  [MutableVector](./mutablevector/) | Vector with standard manipulation functions |
|  [NavModel](./navmodel/) | Interface used to describe different kinds of page titles and page navigation. Navmodels are usually generated in the backend and stored in Redux. |
|  [NavModelBreadcrumb](./navmodelbreadcrumb/) |  |
|  [NavModelItem](./navmodelitem/) |  |
|  [NumberFieldConfigSettings](./numberfieldconfigsettings/) |  |
|  [NumericRange](./numericrange/) |  |
|  [PanelData](./paneldata/) |  |
|  [PanelEditorProps](./paneleditorprops/) |  |
|  [PanelModel](./panelmodel/) |  |
|  [PanelOptionsEditorConfig](./paneloptionseditorconfig/) |  |
|  [PanelOptionsEditorItem](./paneloptionseditoritem/) |  |
|  [PanelOptionsEditorProps](./paneloptionseditorprops/) |  |
|  [PanelPluginDataSupport](./panelplugindatasupport/) |  |
|  [PanelPluginMeta](./panelpluginmeta/) |  |
|  [PanelProps](./panelprops/) |  |
|  [PluginBuildInfo](./pluginbuildinfo/) |  |
|  [PluginConfigPage](./pluginconfigpage/) |  |
|  [PluginConfigPageProps](./pluginconfigpageprops/) |  |
|  [PluginDependencies](./plugindependencies/) |  |
|  [PluginError](./pluginerror/) | Describes error returned from Grafana plugins API call |
|  [PluginInclude](./plugininclude/) |  |
|  [PluginMeta](./pluginmeta/) |  |
|  [PluginMetaInfo](./pluginmetainfo/) |  |
|  [QueryEditorHelpProps](./queryeditorhelpprops/) |  |
|  [QueryEditorProps](./queryeditorprops/) |  |
|  [QueryFix](./queryfix/) |  |
|  [QueryFixAction](./queryfixaction/) |  |
|  [QueryHint](./queryhint/) |  |
|  [QueryResultBase](./queryresultbase/) |  |
|  [QueryResultMeta](./queryresultmeta/) |  |
|  [QueryResultMetaNotice](./queryresultmetanotice/) | QueryResultMetaNotice is a structure that provides user notices for query result data |
|  [QueryResultMetaStat](./queryresultmetastat/) |  |
|  [RangeValueMatcherOptions](./rangevaluematcheroptions/) | Describes a range value matcher option that has a to and a from value to be able to match a range. |
|  [RawTimeRange](./rawtimerange/) |  |
|  [ReadWriteVector](./readwritevector/) | Apache arrow vectors are Read/Write |
|  [ReduceDataOptions](./reducedataoptions/) | Options for how to turn DataFrames into an array of display values |
|  [RegexpOrNamesMatcherOptions](./regexpornamesmatcheroptions/) |  |
|  [RegistryItem](./registryitem/) |  |
|  [RegistryItemWithOptions](./registryitemwithoptions/) |  |
|  [RenameByRegexTransformerOptions](./renamebyregextransformeroptions/) | Options for renameByRegexTransformer |
|  [RenderMarkdownOptions](./rendermarkdownoptions/) |  |
|  [ScopedVar](./scopedvar/) |  |
|  [ScopedVars](./scopedvars/) |  |
|  [ScreenshotInfo](./screenshotinfo/) |  |
|  [SelectableValue](./selectablevalue/) | Used in select elements |
|  [SelectFieldConfigSettings](./selectfieldconfigsettings/) |  |
|  [SetFieldConfigOptionsArgs](./setfieldconfigoptionsargs/) | <b><i>(BETA)</i></b> |
|  [SliderFieldConfigSettings](./sliderfieldconfigsettings/) |  |
|  [StandardEditorContext](./standardeditorcontext/) |  |
|  [StandardEditorProps](./standardeditorprops/) |  |
|  [StandardEditorsRegistryItem](./standardeditorsregistryitem/) |  |
|  [StatsPickerConfigSettings](./statspickerconfigsettings/) |  |
|  [StringFieldConfigSettings](./stringfieldconfigsettings/) |  |
|  [SynchronousDataTransformerInfo](./synchronousdatatransformerinfo/) | Many transformations can be called with a simple synchronous function. When a transformer is defined, it should have identical behavior to using the operator |
|  [SystemDateFormatSettings](./systemdateformatsettings/) |  |
|  [TableData](./tabledata/) |  |
|  [TextMatch](./textmatch/) |  |
|  [ThemeBreakpoints](./themebreakpoints/) | <b><i>(BETA)</i></b> |
|  [ThemeColors](./themecolors/) | <b><i>(BETA)</i></b> |
|  [ThemeShadows](./themeshadows/) | <b><i>(BETA)</i></b> |
|  [ThemeShape](./themeshape/) | <b><i>(BETA)</i></b> |
|  [ThemeSpacing](./themespacing/) | <b><i>(BETA)</i></b> The different signatures imply different meaning for their arguments that can't be expressed structurally. We express the difference with variable names. tslint:disable:unified-signatures |
|  [ThemeTypography](./themetypography/) | <b><i>(BETA)</i></b> |
|  [ThemeTypographyVariant](./themetypographyvariant/) |  |
|  [Threshold](./threshold/) |  |
|  [ThresholdsConfig](./thresholdsconfig/) | Config that is passed to the ThresholdsEditor |
|  [ThresholdsFieldConfigSettings](./thresholdsfieldconfigsettings/) |  |
|  [TimeOption](./timeoption/) |  |
|  [TimeOptions](./timeoptions/) |  |
|  [TimeRange](./timerange/) |  |
|  [TimeSeries](./timeseries/) |  |
|  [TimeZoneCountry](./timezonecountry/) |  |
|  [TimeZoneInfo](./timezoneinfo/) |  |
|  [TraceSpanRow](./tracespanrow/) | This describes the structure of the dataframe that should be returned from a tracing data source to show trace in a TraceView component. |
|  [TransformerRegistryItem](./transformerregistryitem/) |  |
|  [TransformerUIProps](./transformeruiprops/) |  |
|  [UnitFieldConfigSettings](./unitfieldconfigsettings/) |  |
|  [UserOrgDTO](./userorgdto/) |  |
|  [ValueFormat](./valueformat/) |  |
|  [ValueFormatCategory](./valueformatcategory/) |  |
|  [ValueFormatterIndex](./valueformatterindex/) |  |
|  [ValueLinkConfig](./valuelinkconfig/) |  |
|  [ValueMappingFieldConfigSettings](./valuemappingfieldconfigsettings/) |  |
|  [ValueMatcherInfo](./valuematcherinfo/) | Registry item to represent all the different valu matchers supported in the Grafana platform. |
|  [ValueMatcherOptions](./valuematcheroptions/) | Describes a empty value matcher option. |
|  [VariableModel](./variablemodel/) |  |
|  [VariableSuggestion](./variablesuggestion/) |  |
|  [Vector](./vector/) |  |
|  [YAxis](./yaxis/) |  |

## Namespaces

|  Namespace | Description |
|  --- | --- |
|  [arrayUtils](./arrayutils/) |  |
|  [colorManipulator](./colormanipulator/) |  |
|  [dateMath](./datemath/) |  |
|  [rangeUtil](./rangeutil/) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [AppEvents](./appevents/) |  |
|  [binaryOperators](./binaryoperators/) |  |
|  [booleanOverrideProcessor](./booleanoverrideprocessor/) |  |
|  [checkLogsError](./checklogserror/) |  |
|  [classicColors](./classiccolors/) |  |
|  [createDimension](./createdimension/) |  |
|  [DataLinkBuiltInVars](./datalinkbuiltinvars/) |  |
|  [dataLinksOverrideProcessor](./datalinksoverrideprocessor/) |  |
|  [dateTime](./datetime/) |  |
|  [dateTimeAsMoment](./datetimeasmoment/) |  |
|  [dateTimeFormat](./datetimeformat/) | Helper function to format date and time according to the specified options. If no options are supplied, then default values are used. For more details, see [DateTimeOptionsWithFormat]({{< relref "../data/datetimeoptionswithformat.md" >}})<!-- -->. |
|  [dateTimeFormatISO](./datetimeformatiso/) | Helper function to format date and time according to the standard ISO format e.g. 2013-02-04T22:44:30.652Z. If no options are supplied, then default values are used. For more details, see [DateTimeOptionsWithFormat]({{< relref "../data/datetimeoptionswithformat.md" >}})<!-- -->. |
|  [dateTimeFormatTimeAgo](./datetimeformattimeago/) | Helper function to return elapsed time since passed date. The returned value will be formatted in a human readable format e.g. 4 years ago. If no options are supplied, then default values are used. For more details, see [DateTimeOptions]({{< relref "../data/datetimeoptions.md" >}})<!-- -->. |
|  [dateTimeFormatWithAbbrevation](./datetimeformatwithabbrevation/) | Helper function to format date and time according to the Grafana default formatting, but it also appends the time zone abbreviation at the end e.g. 2020-05-20 13:37:00 CET. If no options are supplied, then default values are used. For more details please see [DateTimeOptions]({{< relref "../data/datetimeoptions.md" >}})<!-- -->. |
|  [dateTimeForTimeZone](./datetimefortimezone/) |  |
|  [dateTimeParse](./datetimeparse/) | Helper function to parse a number, text or Date to a DateTime value. If a timeZone is supplied the incoming value is parsed with that timeZone as a base. The only exception to this is if the passed value is in a UTC-based format. Then it will use UTC as the base. If no format is specified the current system format will be assumed.<!-- -->It can also parse the Grafana quick date and time format, e.g. now-6h will be parsed as Date.now() - 6 hours and returned as a valid DateTime value.<!-- -->If no options are supplied, then default values are used. For more details please see [DateTimeOptions]({{< relref "../data/datetimeoptions.md" >}})<!-- -->. |
|  [DEFAULT\_FIELD\_DISPLAY\_VALUES\_LIMIT](./default_field_display_values_limit/) |  |
|  [DefaultTimeZone](./defaulttimezone/) |  |
|  [deprecationWarning](./deprecationwarning/) |  |
|  [displayNameOverrideProcessor](./displaynameoverrideprocessor/) |  |
|  [escapeStringForRegex](./escapestringforregex/) |  |
|  [escapeUnescapedString](./escapeunescapedstring/) |  |
|  [FALLBACK\_COLOR](./fallback_color/) |  |
|  [fieldMatchers](./fieldmatchers/) | Registry that contains all of the built in field matchers. |
|  [fieldReducers](./fieldreducers/) |  |
|  [frameMatchers](./framematchers/) | Registry that contains all of the built in frame matchers. |
|  [GAUGE\_DEFAULT\_MAXIMUM](./gauge_default_maximum/) |  |
|  [GAUGE\_DEFAULT\_MINIMUM](./gauge_default_minimum/) |  |
|  [getAllValuesFromDimension](./getallvaluesfromdimension/) |  |
|  [getColumnFromDimension](./getcolumnfromdimension/) |  |
|  [getColumnsFromDimension](./getcolumnsfromdimension/) |  |
|  [getDimensionByName](./getdimensionbyname/) |  |
|  [getFieldDisplayValues](./getfielddisplayvalues/) |  |
|  [getLocale](./getlocale/) |  |
|  [getLocaleData](./getlocaledata/) |  |
|  [getSeriesTimeStep](./getseriestimestep/) | Returns minimal time step from series time field |
|  [getTimeField](./gettimefield/) |  |
|  [getTimeZone](./gettimezone/) | Used to get the current selected time zone. If a valid time zone is passed in the options it will be returned. If no valid time zone is passed either the time zone configured for the user account will be returned or the default for Grafana. |
|  [getTimeZoneGroups](./gettimezonegroups/) |  |
|  [getTimeZoneInfo](./gettimezoneinfo/) |  |
|  [getTimeZones](./gettimezones/) |  |
|  [getValueFromDimension](./getvaluefromdimension/) |  |
|  [guessFieldTypes](./guessfieldtypes/) |  |
|  [hasMsResolution](./hasmsresolution/) | Checks if series time field has ms resolution |
|  [identityOverrideProcessor](./identityoverrideprocessor/) |  |
|  [isDataFrame](./isdataframe/) |  |
|  [isDateTime](./isdatetime/) |  |
|  [ISO\_8601](./iso_8601/) |  |
|  [isTableData](./istabledata/) |  |
|  [locationUtil](./locationutil/) |  |
|  [LogsParsers](./logsparsers/) |  |
|  [MISSING\_VALUE](./missing_value/) |  |
|  [numberOverrideProcessor](./numberoverrideprocessor/) |  |
|  [objRemoveUndefined](./objremoveundefined/) |  |
|  [onUpdateDatasourceJsonDataOption](./onupdatedatasourcejsondataoption/) |  |
|  [onUpdateDatasourceJsonDataOptionChecked](./onupdatedatasourcejsondataoptionchecked/) |  |
|  [onUpdateDatasourceJsonDataOptionSelect](./onupdatedatasourcejsondataoptionselect/) |  |
|  [onUpdateDatasourceOption](./onupdatedatasourceoption/) |  |
|  [onUpdateDatasourceResetOption](./onupdatedatasourceresetoption/) |  |
|  [onUpdateDatasourceSecureJsonDataOption](./onupdatedatasourcesecurejsondataoption/) |  |
|  [onUpdateDatasourceSecureJsonDataOptionSelect](./onupdatedatasourcesecurejsondataoptionselect/) |  |
|  [PanelEvents](./panelevents/) |  |
|  [selectOverrideProcessor](./selectoverrideprocessor/) |  |
|  [setLocale](./setlocale/) |  |
|  [sortInAscendingOrder](./sortinascendingorder/) |  |
|  [sortInDescendingOrder](./sortindescendingorder/) |  |
|  [sortLogRows](./sortlogrows/) |  |
|  [sortLogsResult](./sortlogsresult/) |  |
|  [standardEditorsRegistry](./standardeditorsregistry/) |  |
|  [standardFieldConfigEditorRegistry](./standardfieldconfigeditorregistry/) |  |
|  [standardTransformers](./standardtransformers/) |  |
|  [standardTransformersRegistry](./standardtransformersregistry/) | Registry of transformation options that can be driven by stored configuration files. |
|  [stringOverrideProcessor](./stringoverrideprocessor/) |  |
|  [systemDateFormats](./systemdateformats/) |  |
|  [textUtil](./textutil/) |  |
|  [thresholdsOverrideProcessor](./thresholdsoverrideprocessor/) |  |
|  [TIME\_FORMAT](./time_format/) |  |
|  [TIME\_SERIES\_METRIC\_FIELD\_NAME](./time_series_metric_field_name/) |  |
|  [TIME\_SERIES\_TIME\_FIELD\_NAME](./time_series_time_field_name/) |  |
|  [TIME\_SERIES\_VALUE\_FIELD\_NAME](./time_series_value_field_name/) |  |
|  [timeZoneAbbrevation](./timezoneabbrevation/) | Helper function to return only the time zone abbreviation for a given date and time value. If no options are supplied, then default values are used. For more details please see [DateTimeOptions]({{< relref "../data/datetimeoptions.md" >}})<!-- -->. |
|  [timeZoneFormatUserFriendly](./timezoneformatuserfriendly/) |  |
|  [toDuration](./toduration/) |  |
|  [toLegacyResponseData](./tolegacyresponsedata/) |  |
|  [toPascalCase](./topascalcase/) |  |
|  [toUtc](./toutc/) |  |
|  [unEscapeStringFromRegex](./unescapestringfromregex/) |  |
|  [unitOverrideProcessor](./unitoverrideprocessor/) |  |
|  [updateDatasourcePluginJsonDataOption](./updatedatasourcepluginjsondataoption/) |  |
|  [updateDatasourcePluginResetOption](./updatedatasourcepluginresetoption/) |  |
|  [updateDatasourcePluginSecureJsonDataOption](./updatedatasourcepluginsecurejsondataoption/) |  |
|  [urlUtil](./urlutil/) |  |
|  [valueMappingsOverrideProcessor](./valuemappingsoverrideprocessor/) |  |
|  [valueMatchers](./valuematchers/) | Registry that contains all of the built in value matchers. |
|  [VAR\_CALC](./var_calc/) |  |
|  [VAR\_CELL\_PREFIX](./var_cell_prefix/) |  |
|  [VAR\_FIELD\_LABELS](./var_field_labels/) |  |
|  [VAR\_FIELD\_NAME](./var_field_name/) |  |
|  [VAR\_SERIES\_NAME](./var_series_name/) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [AlertErrorPayload](./alerterrorpayload/) |  |
|  [AlertPayload](./alertpayload/) |  |
|  [AnnotationEventMappings](./annotationeventmappings/) |  |
|  [BinaryOperation](./binaryoperation/) |  |
|  [DataQueryResponseData](./dataqueryresponsedata/) |  |
|  [DataSourceOptionsType](./datasourceoptionstype/) |  |
|  [DataSourceQueryType](./datasourcequerytype/) |  |
|  [DatasourceRef](./datasourceref/) | In 8.2, this will become an interface |
|  [DateTimeInput](./datetimeinput/) |  |
|  [DecimalCount](./decimalcount/) |  |
|  [Dimensions](./dimensions/) |  |
|  [DisplayProcessor](./displayprocessor/) |  |
|  [DurationInput](./durationinput/) |  |
|  [DurationUnit](./durationunit/) |  |
|  [ExploreQueryFieldProps](./explorequeryfieldprops/) |  |
|  [FieldColorSeriesByMode](./fieldcolorseriesbymode/) | <b><i>(BETA)</i></b> |
|  [FieldMatcher](./fieldmatcher/) |  |
|  [FormatInput](./formatinput/) |  |
|  [FrameMatcher](./framematcher/) |  |
|  [GraphSeriesValue](./graphseriesvalue/) |  |
|  [InterpolateFunction](./interpolatefunction/) |  |
|  [KeyValue](./keyvalue/) |  |
|  [LayoutMode](./layoutmode/) |  |
|  [LegacyResponseData](./legacyresponsedata/) | Starting in v6.2 DataFrame can represent both TimeSeries and TableData |
|  [LinkTarget](./linktarget/) |  |
|  [LiveChannelEvent](./livechannelevent/) |  |
|  [MutableField](./mutablefield/) |  |
|  [NavIndex](./navindex/) |  |
|  [PanelMigrationHandler](./panelmigrationhandler/) | Called when a panel is first loaded with current panel model |
|  [PanelOptionEditorsRegistry](./paneloptioneditorsregistry/) |  |
|  [PanelTypeChangedHandler](./paneltypechangedhandler/) | Called before a panel is initialized. Allows panel inspection for any updates before changing the panel type. |
|  [PreferredVisualisationType](./preferredvisualisationtype/) |  |
|  [SplitOpen](./splitopen/) | SplitOpen type is used in Explore and related components. |
|  [StandardOptionConfig](./standardoptionconfig/) | <b><i>(BETA)</i></b> |
|  [ThemeBreakpointsKey](./themebreakpointskey/) | <b><i>(BETA)</i></b> |
|  [ThemeZIndices](./themezindices/) | <b><i>(BETA)</i></b> |
|  [TimeFragment](./timefragment/) |  |
|  [TimeSeriesPoints](./timeseriespoints/) |  |
|  [TimeSeriesValue](./timeseriesvalue/) |  |
|  [TimeZone](./timezone/) |  |
|  [TimeZoneBrowser](./timezonebrowser/) |  |
|  [TimeZoneResolver](./timezoneresolver/) | The type to describe the time zone resolver function that will be used to access the default time zone of a user. |
|  [TimeZoneUtc](./timezoneutc/) |  |
|  [TraceKeyValuePair](./tracekeyvaluepair/) | Type representing a tag in a trace span or fields of a log. |
|  [TraceLog](./tracelog/) | Type representing a log in a span. |
|  [UrlQueryMap](./urlquerymap/) | Type to represent the values parsed from the query string. |
|  [UrlQueryValue](./urlqueryvalue/) | Type to represent the value of a single query variable. |
|  [ValueConverter](./valueconverter/) |  |
|  [ValueFormatter](./valueformatter/) |  |
|  [ValueMatcher](./valuematcher/) | Value matcher type to describe the matcher function |
|  [VariableType](./variabletype/) |  |

